[fix]: use env variables, put param annotations, correct attachment upload